--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     const params = new URLSearchParams(window.location.search);
     const id = params.get('id');
 
-    const DATA_URL = "TU_URL_DE_APPS_SCRIPT_AQUI";
+    const DATA_URL = "https://script.google.com/macros/s/AKfycbxRk9Uu2_AMhwY1KRVWA_HeNlWm-b0_A1LUvF3Yg4_YfsXEXnAEQOjSzuVl1sWxnTTpqg/exec";
 
     fetch(DATA_URL)
       .then(r => r.json())
