--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script>
     const params = new URLSearchParams(window.location.search);
     const id = params.get('id');
-    const DATA_URL = "TU_URL_DE_APPS_SCRIPT"; // cambia esto por tu URL real
+    const DATA_URL = "https://script.google.com/macros/s/AKfycbxRk9Uu2_AMhwY1KRVWA_HeNlWm-b0_A1LUvF3Yg4_YfsXEXnAEQOjSzuVl1sWxnTTpqg/exec"; // cambia esto por tu URL real
 
     if (!id) {
       document.body.innerHTML = "<h2>Falta el ID del memorial.</h2>";
